# clip

./: .gitignore  CMakeLists.txt  README.md
ci/: azure_pipeline.yml
cmake/: DownloadGoogleTest.cmake
examples/: ArgumentValue.cpp  CMakeLists.txt  EnvironmentVars.cpp  ExampleUtils.hpp  MixedArgs.cpp  OptionalArgs.cpp  PositionalArgs.cpp  PositionalOptionalArgs.cpp
include/CommandLineInputParser/: Api.hpp  ArgumentValue.hpp  CommandLineParser.hpp  OptionalArgument.hpp  clip.hpp
single_header/CommandLineInputParser/: clip.hpp
src/: CommandLineParser.cpp  Match.hpp
tests/: CMakeLists.txt  Test_ArgumentValue.cpp  Test_OptionalArgument.cpp  conanfile.txt
